--- a/client/home-page.html
+++ b/client/home-page.html
@@ -1,1 +1,3 @@
-<div>{{message}}</div>
+<div class="row">
+    <player-stand player="player" ng-repeat="player in players" class="col-md-offset-1 col-md-3"></player-stand>
+</div>
