--- a/client/index.html
+++ b/client/index.html
@@ -2,16 +2,17 @@
 <!doctype html>
 <html ng-app="app">
 <head>
-    <title>Klika Transport</title>
+    <title>Jeden z jedenastu</title>
     <link href="bower_components/bootstrap-theme-bootswatch-flatly/css/bootstrap.css" rel="stylesheet">
     <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
 <div ng-controller="AppCtrl">
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">App</a>
+                <a class="navbar-brand" href="#">Jeden z jedenastu</a>
             </div>
         </div>
     </nav>
@@ -31,6 +32,7 @@
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="bower_components/angular-socket-io/socket.min.js"></script>
 <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
+<script type="text/javascript" src="bower_components/angular-7segments/angular-7segments.js"></script>
 <script src="/main.js"></script>
 </body>
 </html>
