--- a/client/home-page.html
+++ b/client/home-page.html
@@ -1,3 +1,7 @@
 <div class="row">
+    <button class="btn btn-success col-md-4 col-md-offset-4" ng-click="resetPlayers()"><i class="fa fa-repeat"></i>  Reset players </button>
+    <div class="col-md-4"></div>
+</div>
+<div class="row">
     <player-stand player="player" ng-repeat="player in players" class="col-md-offset-1 col-md-3"></player-stand>
 </div>
