--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <html ng-app="app">
 <head>
     <title>Jeden z jedenastu</title>
-    <link href="bower_components/bootstrap-theme-bootswatch-flatly/css/bootstrap.css" rel="stylesheet">
+    <link href="bower_components/bootswatch/flatly/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
